--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<body>
 		<div class="wrapper">
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<a class="navbar-brand" href="#">Navbar</a>
+				<a class="navbar-brand" href="#">LOGO</a>
 				<button
 					class="navbar-toggler"
 					type="button"
@@ -34,7 +34,7 @@
 				</button>
 
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
+					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active">
 							<a class="nav-link" href="#"
 								>Home <span class="sr-only">(current)</span></a
