demo logo added

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 				<a href="#" class="navbar-brand">
 					<img
 						class="img-fluid img-responsive"
-						src="./dist/img/car-logo.png"
-						alt="Car Hire London logo"
+						src="./dist/img/logo.png"
+						alt="London PPC logo"
 					/>
 				</a>
 				<button
