--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- custom css -->
 		<link rel="stylesheet" href="./dist/css/style.css" />
 
-		<title>PCO Car Hire</title>
+		<title>London PayPerCustomer</title>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -47,7 +47,7 @@
 							>
 						</li> -->
 						<li class="nav-item">
-							<a class="nav-link scroll" href="#what-is">What is it?</a>
+							<a class="nav-link scroll" href="#what-is">About</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link scroll" href="#how-works">How it works?</a>
@@ -65,7 +65,7 @@
 								href="#"
 								data-toggle="modal"
 								data-target=".bd-example-modal-lg"
-								>Find Car</a
+								>Get started</a
 							>
 						</li>
 					</ul>
@@ -409,16 +409,18 @@
 							<div class="row">
 								<div class="col-md-7">
 									<div class="heading ">
-										<h1>
-											Hire your desired car in one click</h1>
+										<h1>High Quality, Bespoke Lead Generation</h1>
+									</div>
+									<div class="sub-heading ">
+										<h5>We help you get the leads that you need to generate sales.
+											You choose the budget, no contracts & fully bespoke</h5>
 									</div>
 									<div class="hero-button">
-										<button type="button" class="btn button"  data-toggle="modal" data-target=".bd-example-modal-lg">
-											<img src="./dist/img/search-black.png" alt="icon"> 
-											Find Car</button>
+										<button type="button" class="btn button"  data-toggle="modal" data-target=".bd-example-modal-lg">Get Started</button>
+										<button  class="btn button ml-5"  >How it works</button>
 									</div>
 								</div>
-								<div class="col-md-5 sm-hide">
+								<!-- <div class="col-md-5 sm-hide">
 									<div class="shapes-wrapper ">
 										<div class="hero-shapes ">
 											<div class="hs-content">
@@ -437,7 +439,7 @@
 											</div>
 										</div>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 
