--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 									</div>
 									<div class="hero-button">
 										<button type="button" class="btn button"  data-toggle="modal" data-target=".bd-example-modal-lg">Get Started</button>
-										<button  class="btn button ml-5"  >How it works</button>
+										<button  class="btn button button-second ml-5"  >How it works</button>
 									</div>
 								</div>
 								<!-- <div class="col-md-5 sm-hide">
