why-us designed

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 						</div>
 					</div>
 					<div class="wu-content-wrapper">
-						<div class="row ">
+						<div class="row align-items-center">
 							<div class="col-md-6">
 								<div class="wu-content">
 									<p>London PayPerCustomer specialises in gaining high quality leads for its wide range of customers operating in all industries. Every lead we generate for you is completely bespoke and qualified to give you the best chance of turning them into sales.</p>
@@ -472,9 +472,9 @@
 									
 								</div>
 							</div>
-							<div class="col-md-6">
+							<div class="col-md-6 d-none d-md-block">
 								<div class="wu-content-image">
-									<img src="./dist/img/hero1.jpg" alt="what we do image" class="img-fluid">
+									<img src="./dist/img/hero3.jpg" alt="what we do image" class="img-fluid">
 								</div>
 							</div>
 						</div>
