what-we-do designed

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<a class="nav-link scroll" href="#why-us">Why us</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link scroll" href="#about">What we do</a>
+							<a class="nav-link scroll" href="#what-we-do">What we do</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link scroll" href="#how-works">How it works?</a>
