--- a/index.html
+++ b/index.html
@@ -809,15 +809,15 @@
 									contact us now
 								</h3>
 								<p>
-									<img src="./dist/img/telephone.png" alt="Contact phone number" />
+									<img src="./dist/img/phone.png" alt="Contact phone number" />
 									<span><a href="tel:020 8088 3646">020 8088 3646 </a></span>
 								</p>
 								<p>
-									<img src="./dist/img/envelope.png" alt="Contact phone number" />
+									<img src="./dist/img/email.png" alt="Contact phone number" />
 									<span>support@london-ppc.co.uk</span>
 								</p>
 								<p>
-									<img src="./dist/img/home.png" alt="Contact phone number" />
+									<img src="./dist/img/location.png" alt="Contact phone number" />
 									<span>Kemp House, 160 City Road, London, United Kingdom, EC1V 2NX</span>
 								</p>
 							</div>
