--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -15,16 +15,8 @@
 		<!-- custom css -->
 		<link rel="stylesheet" href="./dist/css/style.css" />
 
-		<title>PCO Car Hire</title>
-
-			<!-- Favicons
-		================================================== -->
-		<link rel="icon" href="./dist/img/favicon.png" type="image/x-icon" />
-		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="./dist/img/favicon.png" />
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="./dist/img/favicon.png" />
-		<link rel="apple-touch-icon-precomposed" href="./dist/img/favicon.png" />
+		<title>London PayPerCustomer</title>
 	</head>
-
 
 	<body data-spy="scroll" data-target="#menu">
 		<div class="wrapper">
@@ -32,8 +24,8 @@
 				<a href="./index.html" class="navbar-brand">
 					<img
 						class="img-fluid img-responsive"
-						src="./dist/img/car-logo.png"
-						alt="Car Hire London logo"
+						src="./dist/img/logo.png"
+						alt="London PPC logo"
 					/>
 				</a>
 				<button
@@ -56,17 +48,18 @@
 							>
 						</li> -->
 						<li class="nav-item">
-							<a class="nav-link scroll" href="./index.html#what-is">What is it?</a>
+							<a class="nav-link scroll" href="#why-us">Why us</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link scroll" href="./index.html#how-works">How it works?</a>
+							<a class="nav-link scroll" href="#what-we-do">What we do</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link scroll" href="./index.html#contact">Contact</a>
+							<a class="nav-link scroll" href="#process">process</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link scroll" href="./index.html#areas">Coverage</a>
+							<a class="nav-link scroll" href="#contact">Contact</a>
 						</li>
+						
 						<li class="nav-item">
 							<a
 								class="nav-link button"
@@ -74,7 +67,7 @@
 								href="#"
 								data-toggle="modal"
 								data-target=".bd-example-modal-lg"
-								>Find Car</a
+								>Get started</a
 							>
 						</li>
 					</ul>
@@ -429,15 +422,15 @@
           <div class="row">
             <div class="col">
               <p>
-                <strong>Effective date:</strong> January 2nd 2020 Rent TO Buy CARS (“us”, “we”, or
-                “our”) operates the https://rent-to-buy-cars.uk/ website (the “Service”). This page
+                <strong>Effective date:</strong> January 2nd 2020 London PayPerCustomer (“us”, “we”, or
+                “our”) operates the https://london-ppc.co.uk/ website (the “Service”). This page
                 informs you of our policies regarding the collection, use, and disclosure of
                 personal data when you use our Service and the choices you have associated with that
                 data. We use your data to provide and improve the Service. By using the Service, you
                 agree to the collection and use of information in accordance with this policy.
                 Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy
                 have the same meanings as in our Terms and Conditions, accessible from
-                https://rent-to-buy-cars.uk/
+                https://london-ppc.co.uk/
               </p>
               <div>
                 <h4>Information Collection And Use</h4>
@@ -496,7 +489,7 @@
                 </div>
                 <div>
                   <h4>Use of Data</h4>
-                  <p>Rent to Buy Cars uses the collected data for various purposes:</p>
+                  <p>London PayPerCustomer uses the collected data for various purposes:</p>
                   <ul>
                     <li>To provide and maintain the Service</li>
                     <li>To notify you about changes to our Service</li>
@@ -521,7 +514,7 @@
                     choose to provide information to us, please note that we transfer the data,
                     including Personal Data, to United Kingdom and process it there. Your consent to
                     this Privacy Policy followed by your submission of such information represents
-                    your agreement to that transfer. Rent TO Buy CARS  will take all steps reasonably
+                    your agreement to that transfer. London PayPerCustomer  will take all steps reasonably
                     necessary to ensure that your data is treated securely and in accordance with
                     this Privacy Policy and no transfer of your Personal Data will take place to an
                     organization or a country unless there are adequate controls in place including
@@ -532,13 +525,13 @@
                 <div>
                   <h4>Legal Requirements</h4>
                   <p>
-                    https://rent-to-buy-cars.uk/ may disclose your Personal Data in the good faith belief that
+                    https://london-ppc.co.uk/ may disclose your Personal Data in the good faith belief that
                     such action is necessary to:
                   </p>
                   <ul>
                     <li>To comply with a legal obligation</li>
                     <li>
-                      To protect and defend the rights or property of Rent To Buy Cars
+                      To protect and defend the rights or property of London PayPerCustomer
                     </li>
                     <li>
                       To prevent or investigate possible wrongdoing in connection with the Service
@@ -641,7 +634,7 @@
 			<section class="footer d-none d-md-block">
 				<div class="container-md">
 					<p class="copy text-center">
-						Copyright © 2020 RENT TO BUY CARS. All rights reserved.
+						Copyright © 2020 London PayPerCustomer. All rights reserved.
 					</p>
 				</div>
 			</section>
