--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 												</p>
 												<p>
 													<label>
-														<input  class="with-gap" name="first" type="radio" value="Premium"  />
-														<span>Premium</span>
+														<input  class="with-gap" name="first" type="radio" value="Platinum"  />
+														<span>Platinum</span>
 													</label>
 												</p>
 												
