--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -110,8 +110,8 @@
 												</p>
 												<p>
 													<label>
-														<input  class="with-gap" name="first" type="radio" value="Premium"  />
-														<span>Premium</span>
+														<input  class="with-gap" name="first" type="radio" value="Platinum"  />
+														<span>Platinum</span>
 													</label>
 												</p>
 												
