--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -16,6 +16,14 @@
 		<link rel="stylesheet" href="./dist/css/style.css" />
 
 		<title>London PayPerCustomer</title>
+
+		<!-- Favicons
+	================================================== -->
+	<link rel="icon" href="./dist/img/favicon.png" type="image/x-icon" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="./dist/img/favicon.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="./dist/img/favicon.png" />
+	<link rel="apple-touch-icon-precomposed" href="./dist/img/favicon.png" />
+
 	</head>
 
 	<body data-spy="scroll" data-target="#menu">
